package com.tetras;

// C'est la classe qui permet d'instancier nos voitures

public class CircuitDeCourse {}