package com.tetras;

public class FerrariCar implements VoitureDuChampionnatDeFormuleUn {

    public void accelerer() {}

    public void freiner() {}

    public void tourner() {}

    public String getColor() {
        return "Rouge";
    }
}