package com.tetras;

public class MercedesCar implements VoitureDuChampionnatDeFormuleUn {

    public void accelerer() {}

    public void freiner() {}

    public void tourner() {}

    public String getColor() {
        return "Noir";
    }
}