package com.tetras;

public class RenaultCar implements VoitureDuChampionnatDeFormuleUn {

    public void accelerer() {}

    public void freiner() {}

    public void tourner() {}

    public String getColor() {
        return "Bleu";
    }
}