package com.tetras;

//C'est la liste des différents types de voitures instanciables

public enum VoitureType {
    Ferrari,
    Renault,
    Mercedes
}